<resources>
    <string name="app_name">Restaurateur</string>
    <string name="photo">Photo</string>
    <string name="cust_name">Name</string>
    <string name="cust_addr">Address</string>
    <string name="cust_tel">Telephone Number</string>
    <string name="cust_mail">E-mail</string>
    <string name="cust_hour">Work Hours</string>
    <string name="cust_info">Extra information</string>
    <string name="save_btn">Save</string>
    <string name="edit_mode">Edit Mode</string>
</resources>
